agrgando el contador

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,6 @@
 body {
-    background: black;
+    
+    background-image:url("https://2.blogs.elcomercio.pe/tallerdehistorias/wp-content/uploads/sites/254/2015/02/Estrellas.jpg");
 }
 .imgPersonajes {
     width: 15%;
