--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,30 @@
-.imgStarWars{
-    width: 20%;
-    margin: auto;
-    margin-top: 1%;
+.imagenLogo {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+    text-align: center;
+    margin-top: 18px;
+}
+.container-fluid{
+    border-bottom: 1px solid #2b2b2b;
+    padding-bottom: 20px;
+}
+.imgStarWars {
+    vertical-align: middle;
+    width: 40%;
+}
+.dropdown, .dropend, .dropstart, .dropup {
+    float: right;
+   
+}
+.btndropdown {
+    color: #fff;
+    background-color: #5b529694;
+    border-color: #5b529694;
+    font-size: 34px;
+}
+
+
+.col-4.favoritos {
+    padding-top: 20px;
+    text-align: right;
 }
