--- a/src/styles/personajes.css
+++ b/src/styles/personajes.css
@@ -15,9 +15,10 @@
     border-radius: 0.25rem;
     background: #383d426b;
     height: 300px;
+    margin-bottom: 10px;
 }
 
-.tittlePersonajes {
+.tittle {
     font-size: 2.5rem;
     color: #faf6f6;
     font-family:fantasy;
