--- a/src/styles/planetas.css
+++ b/src/styles/planetas.css
@@ -1,7 +1,7 @@
 .tittlePlanetas {
     font-size: 2.5rem;
     color: #faf6f6;
-    font-family:jedi-subtitle;
+    font-family:fantasy;
     padding: 10px;
-    margin-top: 5%;
+   margin-top: 10px;
 }
