Actualizar cambios en los estilos - Cambie estilos dentro de personajes, naves y planetas.

--- a/src/styles/personajes.css
+++ b/src/styles/personajes.css
@@ -13,7 +13,7 @@
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: 0.25rem;
-    background: #383d426b;
+    background: transparent;
     height: 300px;
     margin-bottom: 10px;
 }
@@ -21,9 +21,8 @@
 .tittle {
     font-size: 2.5rem;
     color: #faf6f6;
-    font-family:fantasy;
-    padding: 10px;
-   
+    font-family: fantasy;
+    padding: 60px 10px;
 }
 
 h3, h3 {
