--- a/src/styles/planetas.css
+++ b/src/styles/planetas.css
@@ -2,6 +2,6 @@
     font-size: 2.5rem;
     color: #faf6f6;
     font-family:fantasy;
-    padding: 10px;
-   margin-top: 10px;
+    padding: 60px 10px;
+  
 }
