--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,19 +1,23 @@
-.imagenLogo {
-    flex: 0 0 auto;
-    width: 33.33333333%;
-;
-   
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
+
+
+img#logotipo {
+  vertical-align: middle;
+  object-fit: cover;
+  vertical-align: middle;
+  width: 40%;
 }
 .container-fluid {
    background: #000000bd;
 }
 
-img, svg {
+.card-img-top {
   vertical-align: middle;
   object-fit: cover;
   aspect-ratio: 4/3;
   vertical-align: middle;
-    width: 40%;
+  width: 40%;
 }
 .flicker-1 {
 	-webkit-animation: flicker-1 2s linear infinite both;
@@ -24,15 +28,18 @@ img, svg {
     float: right;
    
 }
+
+
 .btndropdown {
-    color:black;
-    background-color: white;
-   
-    font-size: 34px;
-    margin-top: 70px;
-    margin-right: 20px;
-    font-family: fantasy;
-    border-radius: 10%;
+  font-weight: 100;
+  border-radius: 0px;
+  border-color: #dcd22b;
+  font-size: 16px;
+  color: #dcd22b;
+  background-color: black;
+  font-family: 'Poppins', sans-serif;
+  margin: 50px 10px;
+  padding: 14px 34px;
 }
 
 
