--- a/src/styles/personajes.css
+++ b/src/styles/personajes.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 .col-md-2 {
     margin: 0 auto;
     flex: 0 0 auto;
@@ -18,22 +20,28 @@
     margin-bottom: 10px;
 }
 
-.tittle {
-    font-size: 2.5rem;
-    color: #faf6f6;
-    font-family: fantasy;
+.tittle {    
+    font-family: 'Righteous', cursive;
+    font-size: 3.5rem;
+    color: #dcd22b;
+
     padding: 60px 10px;
 }
 
+
 h3, h3 {
-    font-size: 1.75rem;
+    font-weight: 300;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     color: white;
-    font-family: monospace;
+
 }
+
+
 .fa-solid, .fas {
     font-weight: 900;
     color: #bb2d4c;
-    font-size: 25px;
+    font-size: 18px;
 }
 .btnLeerMas {
     color: #fff;
