--- a/src/styles/vehiculos.css
+++ b/src/styles/vehiculos.css
@@ -1,7 +1,6 @@
-.tittleVehiculos {
-    font-size: 2.5rem;
-    color: #faf6f6;
-    font-family:fantasy;
+.tittleVehiculos {    
+    font-family: 'Righteous', cursive;
+    font-size: 3.5rem;
+    color: #dcd22b;
     padding: 60px 10px;
-  
 }
